@@ -6,7 +6,7 @@
 // 	$Id$
 //
 // Description:
-//	Class CsPadBaseV1.
+//	Class PnccdBaseV1.
 //
 //------------------------------------------------------------------------
 
