@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-16
+2014-05-21 Mikhail S. Dubrovin
+- in NDArrIOV1 add options for initialization of dedault constants
+- add include/PrincetonBaseV1.h
+	
 Tag: V00-05-15
 2014-05-16 Mikhail S. Dubrovin
 - NDArrIOV1 - add "#include <cstring>" for RHEL6
